loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:8: error: not found: value stepper
writeMessage(""+stepper);
                ^